--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Link-Zone</title>
     <!-- scaled down the entire web page to fit the screen for any device -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="icon" type="image/png" href=""/>
+    <link rel="icon" type="image/png" href="https://github.com/carvalhofilipe1995/feup-ltw-2015/blob/master/resources/logo.png?raw=true"/>
 
 
 	</head>
