--- a/index.html
+++ b/index.html
@@ -8,11 +8,23 @@
     <!-- scaled down the entire web page to fit the screen for any device -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="icon" type="image/png" href="https://github.com/carvalhofilipe1995/feup-ltw-2015/blob/master/resources/logo.png?raw=true"/>
+		<link rel="stylesheet" type="text/css" href="https://github.com/carvalhofilipe1995/feup-ltw-2015/blob/master/css/style.css">
 
 
 	</head>
 
+
 	<body >
+		<div class="main_content">
+			</div>
+
+	<footer>
+		<div class="footer">
+			<span class="copyright">2015 Link-Zone &#169; All rights reserved</span>
+			<span class="developers">Developed by: Luís Carvalho &#38;&#38; Luís Coelho &#38;&#38; Vitor Varela</span>
+		</div>
+	</footer>
+
   </body>
 
 </html>
