--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="icon" type="image/png" href="https://github.com/carvalhofilipe1995/feup-ltw-2015/blob/master/resources/logo.png?raw=true"/>
 
+		  <!-- link with some stylesheet -->
 
 	</head>
 
@@ -16,7 +17,30 @@
 	<body >
 
 		<div class="main_content">
-			</div>
+
+			<h1> Link-Zone </h1>
+			<p> Welcome to Link-Zone </p>
+
+		<!-- login-form -->
+		<form class="login-form" action="reference to login php form" method="post">
+				<input autocomplete="off" class="" type="text" name="username" placeholder="USERNAME">
+				<input class="" type="password" name="password" placeholder="PASSWORD">
+				<input type="submit" value="log in">
+	 	</form>
+
+		 <!-- signup-form -->
+		 <form class="signup-form" action="reference to signup php form" method="post">
+			 <input type="text" name="username" placeholder="USERNAME">
+			 <input type="password" name="password" placeholder="PASSWORD">
+			 <input type="password" name="confirm" placeholder="CONFIRM PASSWORD">
+			 <input type="date" id="myDate" placeholder="BORN">
+			 <input type="text" name="email" placeholder="EMAIL">
+			 <input type="submit" value="Sign Up">
+		 </form>
+
+
+
+	 </div> <!-- closing main_contetn -->
 
 	<footer>
 		<div class="footer">
@@ -24,6 +48,9 @@
 			<span class="developers">Developed by: Luís Carvalho &#38;&#38; Luís Coelho &#38;&#38; Vitor Varela</span>
 		</div>
 	</footer>
+
+	<script type="text/javascript" src="scripts/login.js"></script>
+
 
   </body>
 
