--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 			<p> Welcome to Link-Zone </p>
 
 		<!-- login-form -->
-		<form class="login-form" action="reference to login php form" method="post">
+		<form class="login-form" action="" method="post">
 				<input autocomplete="off" class="" type="text" name="username" placeholder="USERNAME">
 				<input class="" type="password" name="password" placeholder="PASSWORD">
 				<input type="submit" value="log in">
 	 	</form>
 
 		 <!-- signup-form -->
-		 <form class="signup-form" action="reference to signup php form" method="post">
+		 <form class="signup-form" action="" method="post">
 			 <input type="text" name="username" placeholder="USERNAME">
 			 <input type="password" name="password" placeholder="PASSWORD">
 			 <input type="password" name="confirm" placeholder="CONFIRM PASSWORD">
@@ -39,8 +39,7 @@
 		 </form>
 
 
-
-	 </div> <!-- closing main_contetn -->
+	 	</div> <!-- closing main_contetn -->
 
 	<footer>
 		<div class="footer">
