--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <div class="logmod__container">
       <ul class="logmod__tabs">
         <li data-tabtar="lgm-2"><a href="#">Login</a></li>
-        <li data-tabtar="lgm-1"><a href="#">Sign Up</a></li>
+        <li data-tabtar="lgm-1"><a href="#">Registar</a></li>
       </ul>
       <div class="logmod__tab-wrapper">
       <div class="logmod__tab lgm-1">
         <div class="logmod__heading">
-          <span class="logmod__heading-subtitle">Enter your personal details <strong>to create an acount</strong></span>
+          <span class="logmod__heading-subtitle">Introduza os seus dados pessoais <strong>para criar uma conta</strong></span>
         </div>
         <div class="logmod__form">
           <form accept-charset="utf-8" action="action_register.php" method="post" enctype="multipart/form-data" class="simform">
@@ -34,23 +34,19 @@
                 <input class="string optional"  name="password" placeholder="Password" type="text" >
               </div>
               <div class="input string optional">
-                <label class="string optional" for="user-pw-repeat">Repeat password *</label>
-                <input class="string optional" placeholder="Repeat password" type="text" >
-              </div>
-            </div>
-			<div class="sminputs">
-              <div class="input string optional">
                 <label class="string optional" for="email">Email*</label>
                 <input class="string optional" type="email" name="email" placeholder="Email" >
               </div>
+			  
+		   
+            </div>
+			<div class="sminputs">
 			  <div class="input string optional">
                 <label class="string optional" for="user-name">Date of birth*</label>
                 <input class="string optional"  name="bday" placeholder="Date of birth" type="date" >
               </div>
-            </div>
 			
-			<div class="sminputs">
-              <div class="input full">
+              <div class="input string optional">
                 <label class="string optional" for="image">Profile picture*</label>
                 <input class="string optional" maxlength="255" name="image"  type="file" >
               </div>
@@ -68,7 +64,7 @@
       </div>
       <div class="logmod__tab lgm-2">
         <div class="logmod__heading">
-          <span class="logmod__heading-subtitle">Enter your username and password <strong>to sign in</strong></span>
+          <span class="logmod__heading-subtitle">Introduza o seu username e password <strong>para entrar</strong></span>
         </div> 
         <div class="logmod__form">
           <form accept-charset="utf-8" action="action_login.php" method="post" class="simform">
@@ -82,7 +78,7 @@
               <div class="input full">
                 <label class="string optional" for="password">Password *</label>
                 <input class="string optional" placeholder="Password" type="password" name="password" required>
-                <span class="hide-password">Show</span>
+                <span class="hide-password">Mostrar</span>
               </div>
             </div>
             <div class="simform__actions">
@@ -92,7 +88,6 @@
         </div> 
         <div class="logmod__alter">
           <div class="logmod__alter-container">
-
           </div>
         </div>
           </div>
